traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Erreur de compilation :
TraversalZigZag:3: error: ':' expected but ')' found.
def avanceCrois(a):Boolean={
                 ^TraversalZigZag:38: error: identifier expected but '}' found.
}
^